- [MAJOR] Added application identifier to cache (physical identifier).  Prevents multiple apps using the same logical identifier from sharing tokens. (#1660)
- [MINOR] Capture whether token is returned from cache during silent token requests (#1941)
- [MINOR] Capture span status and error codes in missing scenarios (#1940)

V.9.1.0
----------
- [MINOR] Convert crypto operation spans into metrics (#1909)
- [PATCH] Move clearClientCertPreferences to onCreateView only (#1915)
- [MINOR] Propagate span context from MSAL to Broker (#1926)

V.9.0.1
----------
- [PATCH] Moving ClearClientCertPreferences back to onCreate and handleBackButtonPressed (#1908)

V.9.0.0
----------
- [MINOR] Add BrokerContentProvider path and IpcStrategy for new device registration API (#1843)
- [PATCH] Adding cached credential service request id to telemetry (#1866)
- [MAJOR] Add support for client/application managed key in pop flow (#1854)
- [PATCH] Moved clearClientCertPreferences to onPageLoaded. (#1855)
- [MINOR] Add new exception type for broker protocol not supported exception during msal-broker handshake (#1859)
- [MINOR] Leverage Otel Utility create span method (#1877)
- [MINOR] Add Open Telemetry explicitly in common as transitive is set to false (#1882)
- [MINOR] Add open telemetry to consumer rules (#1883)
- [PATCH] Fixes MSAL Issue #1715 (#1894)
- [MINOR] Add support to reset broadcast Executor service (#1895)

V.8.0.3
----------
- [PATCH] Add null checks for devices that do not support USB_SERVICE. (#1885)

V.8.0.2
----------
- [PATCH] Remove java.time.* Java8 APIs (#1868)

V.8.0.1
----------
- [PATCH] Avoid keystore key overwriting for apps using sharedUserId. (#1864)

Version 8.0.0
----------
- [MINOR] Add opt-in flag to skip expensive SecretKey invalidation steps (#1837)
- [MINOR] Storage performance improvements (#1852)
- [PATCH] More fields exposed for GSON based logging for Broker Token Parameters (#1849)