@@ -30,7 +30,7 @@ codeCoverageReport {
 
 // In dev, we want to keep the dependencies(common4j, broker4j, common) to 0.0.+ to be able to be consumed by daily dev pipeline.
 // In release/*, we change these to specific versions being consumed.
-def common4jVersion = "7.0.0-RC1"
+def common4jVersion = "7.0.0-RC2"
 if (project.hasProperty("distCommon4jVersion") && project.distCommon4jVersion != '') {
     common4jVersion = project.distCommon4jVersion
 }
@@ -179,7 +179,6 @@ dependencies {
 
     implementation platform("io.opentelemetry:opentelemetry-bom:1.18.0")
     implementation('io.opentelemetry:opentelemetry-api:1.18.0')
-    implementation('io.opentelemetry:opentelemetry-sdk-trace:1.18.0')
     implementation ('androidx.activity:activity:1.2.3')
 }
 
