@@ -1,4 +1,4 @@
 #Wed May 12 20:08:39 UTC 2021
-versionName=7.0.0-RC1
+versionName=7.0.0-RC2
 versionCode=1
 latestPatchVersion=227
