@@ -1,4 +1,4 @@
 #Tue Apr 06 22:55:08 UTC 2021
-versionName=10.0.0-RC1
+versionName=10.0.0-RC2
 versionCode=1
 latestPatchVersion=234
